--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -49,192 +49,220 @@
     </div>
 
     <script>
-      let enemiesArray = [{
-          id: randomPokemonId,
-          name: randomPokemon.name,
-          maxHP: enemyHP,
-          currentHP: ememyCurrentHp,
-          damage: skillItem.id,
-          alive: true,
-      }]
+      let enemiesArray = [];
 
-      let myPokemonsArray = [{
-        id: myPokemonId,
-        name: myPokemon.name,
-        maxHP: myPokemonHP,
-        currentHP: myPokemonCurrentHp,
-        damage: skillitem.id
-        alive: true,
-      }]
+      let myPokemonsArray = [];
 
+      async function fetchRandomPokemon() {
+        console.log("Inne i fetchRandomPokemon");
+        try {
+          const randomPokemon = [];
+          for (let i = 0; i < 3; i++) {
+            const randomPokemonId = Math.floor(Math.random() * 400) + 1;
+            const randomPokemonRequest = await fetch(
+              "https://pokeapi.co/api/v2/pokemon/" + randomPokemonId
+            );
+            const randomPokemonData = await randomPokemonRequest.json();
+            randomPokemon.push(randomPokemonData);
+          }
 
-            async function fetchRandomPokemon() {
-              console.log("Inne i fetchRandomPokemon");
-              try {
-                const randomPokemon = [];
-                for (let i = 0; i < 3; i++) {
-                  const randomPokemonId = Math.floor(Math.random() * 400) + 1;
-                  const randomPokemonRequest = await fetch(
-                    "https://pokeapi.co/api/v2/pokemon/" + randomPokemonId
-                  );
-                  const randomPokemonData = await randomPokemonRequest.json();
-                  randomPokemon.push(randomPokemonData);
-                }
+          return randomPokemon;
+        } catch {
+          console.error("Feil ved innlastning av Random Pokemon!");
+        }
+      }
 
-                return randomPokemon;
-              } catch {
-                console.error("Feil ved innlastning av Random Pokemon!");
-              }
-            }
+      async function fetchRandomPokemonData(pokemonId) {
+        try {
+          const pokemonDataRequest = await fetch(
+            `https://pokeapi.co/api/v2/pokemon/${pokemonId}`
+          );
+          const data = await pokemonDataRequest.json();
 
-            async function fetchRandomPokemonData(pokemonId) {
-              try {
-                const pokemonDataRequest = await fetch(
-                  `https://pokeapi.co/api/v2/pokemon/${pokemonId}`
-                );
-                const data = await pokemonDataRequest.json();
-                return data;
-              } catch {
-                console.error("Klarte ikke å hente Pokemons HP");
-              }
-            }
+          return data;
+        } catch {
+          console.error("Klarte ikke å hente Pokemons HP");
+        }
+      }
 
-            async function fetchPokemonImg() {
-              try {
-                const randomPokemonData = await fetchRandomPokemon();
-                const enemyId = randomPokemonData[0].id;
-                const myPokemonId = randomPokemonData[1].id;
+      function getHP(pokemonData) {
+        return pokemonData.stats.find((stat) => stat.stat.name === "hp")
+          .base_stat;
+      }
 
-                const enemyImgUrl = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${enemyId}.png`;
+      async function fetchPokemonImg() {
+        try {
+          const randomPokemonData = await fetchRandomPokemon();
+          const enemyId = randomPokemonData[0].id;
+          const myPokemonId = randomPokemonData[1].id;
 
-                const myPokemonImgUrl = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${myPokemonId}.png`;
+          const enemyImgUrl = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${enemyId}.png`;
 
-                const enemyContainer = document.querySelector(
-                  ".enemy-container .img-container.enemy"
-                );
-                enemyContainer.innerHTML = `<img src="${enemyImgUrl}" alt="Fiendens bilde">`;
+          const myPokemonImgUrl = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${myPokemonId}.png`;
 
-                const myPokemonContainer = document.querySelector(
-                  ".my-pokemon-container .img-container"
-                );
-                myPokemonContainer.innerHTML = `<img src="${myPokemonImgUrl}" alt="Din Pokemons bilde">`;
-              } catch (error) {
-                console.error("Feil ved lasting av bilde", error);
-              }
-            }
+          const enemyContainer = document.querySelector(
+            ".enemy-container .img-container.enemy"
+          );
+          enemyContainer.innerHTML = `<img src="${enemyImgUrl}" alt="Fiendens bilde">`;
 
-            async function showPokemonImages() {
-              try {
-                await fetchPokemonImg();
-              } catch (error) {
-                console.error("Kunne ikke laste inn bilder", error);
-              }
-            }
+          const myPokemonContainer = document.querySelector(
+            ".my-pokemon-container .img-container"
+          );
+          myPokemonContainer.innerHTML = `<img src="${myPokemonImgUrl}" alt="Din Pokemons bilde">`;
+        } catch (error) {
+          console.error("Feil ved lasting av bilde", error);
+        }
+      }
 
-            async function addPokemonNameData() {
-              try {
-                const randomPokemon = await fetchRandomPokemon();
-                const enemyData = await fetchRandomPokemonData(randomPokemon[0].id);
-                const myPokemonData = await fetchRandomPokemonData(
-                  randomPokemon[1].id
-                );
+      async function showPokemonImages() {
+        try {
+          await fetchPokemonImg();
+        } catch (error) {
+          console.error("Kunne ikke laste inn bilder", error);
+        }
+      }
 
-                const getHP = (pokemonData) => {
-                  return pokemonData.stats.find((stat) => stat.stat.name === "hp")
-                    .base_stat;
-                };
+      async function addPokemonNameData() {
+        try {
+          const randomPokemon = await fetchRandomPokemon();
+          const enemyData = await fetchRandomPokemonData(randomPokemon[0].id);
+          const myPokemonData = await fetchRandomPokemonData(
+            randomPokemon[1].id
+          );
 
-                const enemyHP = getHP(enemyData);
-                const myPokemonHP = getHP(myPokemonData);
+          const enemyHP = getHP(enemyData);
+          const myPokemonHP = getHP(myPokemonData);
 
-                document.querySelector("#enemy-name-txt").innerHTML =
-                  randomPokemon[0].name;
-                document.querySelector(
-                  "#enemy-health-txt"
-                ).innerHTML = `HP: ${enemyHP}`;
-                document.querySelector("#my-pokemon-name").innerHTML =
-                  randomPokemon[1].name;
-                document.querySelector(
-                  "#my-pokemon-health-txt"
-                ).innerHTML = `HP: ${myPokemonHP}`;
+          console.log("Enemy HP:", enemyHP); // Debugging
+          console.log("My Pokemon HP:", myPokemonHP); // Debugging
 
-                //Fetch og display skills (move)
-                //Oppdatere Attack-container med myPokemonMoves
-                const myPokemonMoves = myPokemonData.moves
-                  .slice(0, 4)
-                  .map((move) => move.move.name);
+          document.querySelector("#enemy-name-txt").innerHTML =
+            randomPokemon[0].name;
+          document.querySelector(
+            "#enemy-health-txt"
+          ).innerHTML = `HP: ${enemyHP}`;
+          document.querySelector("#my-pokemon-name").innerHTML =
+            randomPokemon[1].name;
+          document.querySelector(
+            "#my-pokemon-health-txt"
+          ).innerHTML = `HP: ${myPokemonHP}`;
 
-                //EnemyMoves skal lagres skjult
-                const skillItem = document.querySelectorAll("#skills-list .skill");
-                const enemyMoves = enemyData.moves
-                  .slice(0, 4)
-                  .map((move) => move.move.name);
-                skillItem.forEach((item, index) => {
-                  item.textContent = myPokemonMoves[index];
-                });
+          //Fetch og display skills (move)
+          //Oppdatere Attack-container med myPokemonMoves
+          const myPokemonMoves = myPokemonData.moves
+            .slice(0, 4)
+            .map((move) => move.move.name);
 
-                skillItem.forEach((item, index) => {
-                  item.textContent = myPokemonMoves[index];
-                });
-              } catch (error) {
-                console.error("Feil ved oppdatering av navn på Pokemon"), error;
-              }
-            }
+          //EnemyMoves skal lagres skjult
+          const skillItem = document.querySelectorAll("#skills-list .skill");
+          const enemyMoves = enemyData.moves
+            .slice(0, 4)
+            .map((move) => move.move.name);
+          skillItem.forEach((item, index) => {
+            item.textContent = myPokemonMoves[index];
+          });
 
-            async function saveEnemyMoves() {
-              try {
-                const randomPokemon = await fetchRandomPokemon();
-                const enemyData = await fetchRandomPokemonData(randomPokemon[0].id);
-                const enemySkills = enemyData.move
-                  .slice(0, 4)
-                  .map((move) => move.move.name);
+          skillItem.forEach((item, index) => {
+            item.textContent = myPokemonMoves[index];
+          });
+        } catch (error) {
+          console.error("Feil ved oppdatering av navn på Pokemon", error);
+        }
+      }
 
-                localStorage.setItem("enemySkills", JSON.stringify(enemySkills));
-              } catch {
-                console.error("Klarte ikke å lagre fiendens skills i localStorage");
-              }
-            }
+      async function saveEnemyMoves() {
+        try {
+          const randomPokemon = await fetchRandomPokemon();
+          const enemyData = await fetchRandomPokemonData(randomPokemon[0].id);
+          const enemySkills = enemyData.move
+            .slice(0, 4)
+            .map((move) => move.move.name);
 
-            //hente inn attack-container og skills
-            const myPokemonContainer = document.querySelector(".my-attack-container");
-            const skills = document.querySelector(".skill");
+          localStorage.setItem("enemySkills", JSON.stringify(enemySkills));
+        } catch {
+          console.error("Klarte ikke å lagre fiendens skills i localStorage");
+        }
+      }
 
-            //Styling av container
-            myPokemonContainer.style.backgroundColor = "lightGrey";
-            myPokemonContainer.style.border = "5px double Black";
-            myPokemonContainer.style.width = "400px";
-            myPokemonContainer.style.position = "fixed";
-            myPokemonContainer.style.bottom = "0";
+      //hente inn attack-container og skills
+      const myPokemonContainer = document.querySelector(".my-attack-container");
+      const skills = document.querySelector(".skill");
 
-            //styling tekst inni container
-            const skillsList = document.querySelector("#skills-list");
-            skillsList.style.display = "grid";
-            skillsList.style.gridTemplateColumns = "auto auto";
-            skillsList.style.listStyleType = "none";
+      //Styling av container
+      myPokemonContainer.style.backgroundColor = "lightGrey";
+      myPokemonContainer.style.border = "5px double Black";
+      myPokemonContainer.style.width = "400px";
+      myPokemonContainer.style.position = "fixed";
+      myPokemonContainer.style.bottom = "0";
 
-            showSkills = [];
-            //skills heter "MOVE" i PokeAPI
+      //styling tekst inni container
+      const skillsList = document.querySelector("#skills-list");
+      skillsList.style.display = "grid";
+      skillsList.style.gridTemplateColumns = "auto auto";
+      skillsList.style.listStyleType = "none";
 
-            showSkills.forEach((skill) => {
-              skill.addEventListener("click", function () {
-                alert(
-                  `${myPokemonId} har angrepet med ${skill}. ${enemyId} har nå ${enemyData}HP igjen!`
-                );
-              });
-            });
+      showSkills = [];
+      //skills heter "MOVE" i PokeAPI
 
-            function myPokemonAttack() {
-              if (myPokemon.currentHP <0) {
-                myPokemon[0,1,2].alive = false;
-                const mySelectedPokemon = document.querySelectorAll(`.img-container .my-pokemon".${myPokemon}`);
-                mySelectedPokemon.remove();
-                alert("Dine Pokémons har ingen HP igjen, spillet er tapt!")
-              }
-            }
+      showSkills.forEach((skill) => {
+        skill.addEventListener("click", function () {
+          alert(
+            `${myPokemonId} har angrepet med ${skill}. ${enemyId} har nå ${enemyData}HP igjen!`
+          );
+        });
+      });
 
-            showPokemonImages();
-            addPokemonNameData();
-            saveEnemyMoves();
+      function myPokemonAttack() {
+        if (myPokemon.currentHP < 0) {
+          myPokemon[(0, 1, 2)].alive = false;
+          const mySelectedPokemon = document.querySelectorAll(
+            `.img-container .my-pokemon".${myPokemon}`
+          );
+          mySelectedPokemon.remove();
+          alert("Dine Pokémons har ingen HP igjen, spillet er tapt!");
+        }
+      }
+
+      async function addDataToArrays() {
+        try {
+          const randomPokemon = await fetchRandomPokemon(); //henter fetched pokemons imnn til funksjonen
+          const enemyData = randomPokemon[0]; //skiller mellom fiende og mine pokemons
+          const myPokemonData = randomPokemon[1];
+
+          const { enemyHP, myPokemonHP } = await addPokemonNameData();
+
+          for (let i = 0; i < 3; i++) {
+            const enemy = {
+              id: enemyData.id,
+              name: enemyData.name,
+              maxHP: enemyHP,
+              /*currentHP: ememyCurrentHp,
+              damage: skillItem.id, //Denne må ha en funksjon/fetch først*/
+              alive: true,
+            };
+
+            enemiesArray.push(enemy);
+          }
+
+          const myPokemon = {
+            id: myPokemonData.id,
+            name: myPokemonData.name,
+            maxHP: myPokemonHP(myPokemonData),
+            /*currentHP: myPokemonCurrentHP,
+              damage: skillItem.id, //Denne må ha en funksjon/fetch først*/
+            alive: true,
+          };
+
+          myPokemonsArray.push(myPokemon);
+        } catch (error) {
+          console.error("Klarte ikke legge til i Arrays", error);
+        }
+      }
+
+      showPokemonImages();
+      addPokemonNameData();
+      saveEnemyMoves();
+      addDataToArrays();
     </script>
   </body>
 </html>
