--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -173,13 +173,18 @@
         try {
           const randomPokemon = await fetchRandomPokemon();
           const enemyData = await fetchRandomPokemonData(randomPokemon[0].id);
-          const enemySkills = enemyData.move
-            .slice(0, 4)
-            .map((move) => move.move.name);
-
-          localStorage.setItem("enemySkills", JSON.stringify(enemySkills));
-        } catch {
-          console.error("Klarte ikke å lagre fiendens skills i localStorage");
+          const enemySkills =
+            enemyData.moves && enemyData.moves.length > 0
+              ? enemyData.moves.slice(0, 4).map((move) => move.move.name)
+              : sessionStorage.setItem(
+                  "enemySkills",
+                  JSON.stringify(enemySkills)
+                );
+        } catch (error) {
+          console.error(
+            "Klarte ikke å lagre fiendens skills i sessionStorage",
+            error
+          );
         }
       }
 
