Flyttet litt på pokemon

--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -182,12 +182,12 @@
             container.style.border = "2px solid black";
           });
 
-          //fiende
+          //fiende healhbar
           enemyHealthContainer.style.backgroundColor = "lightgreen";
           enemyHealthContainer.style.position = "fixed";
           enemyHealthContainer.style.left = "50px";
 
-          //myPokemon
+          //myPokemon healthbar
           myPokemonHealtContainer.style.backgroundColor = "pink";
           myPokemonHealtContainer.style.position = "fixed";
           myPokemonHealtContainer.style.right = "50px";
@@ -195,7 +195,7 @@
 
           //style fiendens bildecontainer
           enemyContainer.style.position = "fixed";
-          enemyContainer.style.top = "20px";
+          enemyContainer.style.top = "350px";
           enemyContainer.style.right = "100px";
           enemyContainer.style.width = " 300px";
 
@@ -205,8 +205,8 @@
 
           //style myPokemons bildecontainer
           myPokemonContainer.style.position = "fixed";
-          myPokemonContainer.style.bottom = "100px";
-          myPokemonContainer.style.left = "100px";
+          myPokemonContainer.style.bottom = "50px";
+          myPokemonContainer.style.left = "200px";
 
           //Fetch og display skills (move)
           //Oppdatere Attack-container med myPokemonMoves
