lagt til eventlistener moves (som skal aktivere et angrep)

--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -346,6 +346,14 @@
         }
       }
 
+      const moveBtn = document.querySelectorAll(".skill");
+
+      moveBtn.forEach((skill) => {
+        skill.addEventListener("click", function () {
+          // kode som lager angrep - hente stats
+        });
+      });
+
       showPokemonImages();
       addPokemonNameData();
       saveEnemyMoves();
