--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -314,6 +314,7 @@
             id: enemyData.id,
             name: enemyData.name,
             maxHP: enemyHP,
+            currentHP: enemyHP,
             alive: true,
           };
 
@@ -332,28 +333,6 @@
         }
       }
 
-      function myPokemonAttack() {
-        if (myPokemon.currentHP < 0) {
-          myPokemon[(0, 1, 2)].alive = false;
-          const mySelectedPokemon = document.querySelectorAll(
-            `.img-container .my-pokemon".${myPokemon}`
-          );
-          mySelectedPokemon.remove();
-          alert("Dine Pokémons har ingen HP igjen, spillet er tapt!");
-        }
-      }
-
-      function enemyAttack() {
-        if (enemy.currentHP < 0) {
-          myPokemon[(0, 1, 2)].alive = false;
-          const selectedEnemy = document.querySelectorAll(
-            `.img-container .enemy".${enemy.id}`
-          );
-          selectedEnemy.remove();
-          alert(`${myPokemon.name} har slått ut ${enemy.name}`);
-        }
-      }
-
       //STARTER SPILLET
       const moveBtn = document.querySelectorAll(".skill");
 
@@ -366,10 +345,11 @@
           // kode som lager angrep - hente stats
 
           const selectedSkill = skill.textContent;
+          const damage = generateRandomDamage(-10, 20);
 
           console.log("Skill-elementet ble klikket på:", skill.textContent);
 
-          const damage = generateRandomDamage(-10, 20);
+          enemy.currentHP -= damage;
 
           console.log(`${selectedSkill} forårsaker ${damage} HP skade.`);
 
@@ -377,6 +357,28 @@
             "#enemy-health-txt"
           ).textContent = `HP: ${enemy.currentHP}`;
         });
+
+        function myPokemonAttack() {
+          if (parseInt(myPokemon.currentHP) < 0) {
+            myPokemon[(0, 1, 2)].alive = false;
+            const mySelectedPokemon = document.querySelectorAll(
+              `.img-container .my-pokemon".${myPokemon}`
+            );
+            mySelectedPokemon.remove();
+            alert("Dine Pokémons har ingen HP igjen, spillet er tapt!");
+          }
+        }
+
+        function enemyAttack() {
+          if (parseInt(enemy.currentHP) < 0) {
+            myPokemon[(0, 1, 2)].alive = false;
+            const selectedEnemy = document.querySelectorAll(
+              `.img-container .enemy".${enemy.id}`
+            );
+            selectedEnemy.remove();
+            alert(`${myPokemon.name} har slått ut ${enemy.name}`);
+          }
+        }
       });
 
       showPokemonImages();
