Har lagt til funksjon for å booste med Cherry, men må endre selectedSkill

--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -373,6 +373,14 @@
           ).textContent = `HP: ${enemy.currentHP}`;
         });
 
+        function useCherry() {
+          const boostHP = 10;
+          myPokemon.currentHP += boostHP;
+        }
+
+        const cheriSkill = document.querySelectorAll("#skills-list .skill")[3];
+        cheriSkill.addEventListener("click", useCherry);
+
         function myPokemonAttack() {
           if (parseInt(myPokemon.currentHP) < 0) {
             myPokemon[(0, 1, 2)].alive = false;
